# dans-dv-upload

./: .gitignore  README.md  build-dist.sh  make-windows-installer.sh  pom.xml  pyproject.toml
.github/workflows/: build.yml
packaging/windows/: config.txt  make-installer.sh
src/assembly/: distribution.xml  windows-installer.nsi
src/main/python/dans_dv_upload/: __main__.py  config.py  dataverse.py  dv_upload.py  gui.py  s3_upload.py  upload_file_to_dataset.py  util.py
